--- a/babel-plugin-observing-components/tsconfig.json
+++ b/babel-plugin-observing-components/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2017",
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "importHelpers": true,
+    "importHelpers": false,
     "pretty": true,
     "sourceMap": true,
     "inlineSources": true,
