--- a/babel-plugin-observing-components/package.json
+++ b/babel-plugin-observing-components/package.json
@@ -24,7 +24,8 @@
     "transform": "yarn build:cjs && node test-transform",
     "clean": "rimraf ./dist",
     "typecheck": "tsc --noEmit",
-    "prepublish": "yarn build"
+    "prepublish": "yarn build",
+    "test": "vitest"
   },
   "keywords": [
     "typescript",
@@ -45,7 +46,8 @@
     "@types/babel__traverse": "^7.20.6",
     "@types/node": "^22.13.1",
     "rimraf": "^6.0.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "@babel/core": "^7.26.8",
