--- a/babel-plugin-observing-components/package.json
+++ b/babel-plugin-observing-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-observing-components",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "description": "Wrap components in a observers to make them reactive",
   "author": "Christian Alfoni <christianalfoni@gmail.com>",
   "license": "MIT",
@@ -44,13 +44,14 @@
     "@babel/plugin-syntax-jsx": "^7.24.7",
     "@types/babel__core": "^7.20.5",
     "@types/babel__traverse": "^7.20.6",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.17",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.2",
     "vitest": "^3.0.5"
   },
   "dependencies": {
     "@babel/core": "^7.26.8",
-    "@babel/traverse": "^7.26.8"
+    "@babel/traverse": "^7.26.8",
+    "minimatch": "^10.0.1"
   }
 }
