exclude on swc plugin as well

--- a/swc-plugin-observing-components/Cargo.toml
+++ b/swc-plugin-observing-components/Cargo.toml
@@ -28,3 +28,4 @@ swc_ecma_utils          = { workspace = true }
 swc_ecma_visit          = { workspace = true }
 swc_plugin_macro        = { workspace = true }
 tracing                 = { workspace = true, features = ["release_max_level_off"] }
+globset                 = "0.4.8"
