--- a/swc-plugin-observing-components/transform/Cargo.toml
+++ b/swc-plugin-observing-components/transform/Cargo.toml
@@ -23,6 +23,7 @@ swc_cached     = { workspace = true }
 swc_common     = { workspace = true }
 swc_ecma_ast   = { workspace = true }
 swc_ecma_visit = { workspace = true }
+globset        = "0.4.13"
 
 [dev-dependencies]
 swc_ecma_parser             = { workspace = true }
